--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "*.html",
+      "src": "**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/(.+\\.(?:wasm|data|js|json|ico|html))",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable",
+        "Access-Control-Allow-Origin": "*"
+      },
+      "dest": "/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "/$1"
